[project]
name = "sql-debug-env"
version = "1.0.0"
description = "SQL Debugging OpenEnv Environment"
authors = [{ name = "Varsha" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

#REQUIRED ENTRY POINT (FIXED)
[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
